View Issue Details

IDProjectCategoryView StatusLast Update
0023036Open CASCADEOCCT:Foundation Classespublic2012-03-29 17:26
ReporterszvAssigned Tobugmaster  
PrioritynormalSeverityminor 
Status closedResolutionfixed 
PlatformAOSL 
Product Version6.5.2 
Target Version6.5.3Fixed in Version6.5.3 
Summary0023036: Incorrect initialization of Poly_MakeLoops::Link
DescriptionConstructor of link by two nodes sets incorrect value to 'flags' member field (must be 1 instead of 0).
TagsNo tags attached.
Test case numbertest case is not required

Activities

szv

2012-03-22 15:59

manager   ~0020100

Simple fix is placed in http://svn/svn/occt/branches/23036.

Please review the fix.

msv

2012-03-22 17:21

developer   ~0020104

Reviewed. It is OK.

aan

2012-03-26 16:12

developer   ~0020140

Dear BugMaster,

SVN branch http://svn/svn/occt/branches/23036 has been moved to GIT CR23036 one.

Workbench KAS:dev:aan-23036-occt was created from git branch CR23036
(and aan-23036-products from svn trunk) and compiled on Linux platform.

There are not regressions in aan-23036-products regarding to
KAS:dev:products-20120321-opt

See results in
/QADisk/occttests/results/KAS/dev/aan-23036-products_23032012/lin
See reference results in
/QADisk/occttests/results/KAS/dev/products-2012021-opt_22032012/lin
See test cases in /QADisk/occttests/tests/ED
N.B. In order to launch testing case you can make use the following
instructions
http://doc/doku.php?id=occt:certification

bugmaster

2012-03-29 10:23

administrator   ~0020191

Integrated into master

Related Changesets

occt: master 600519c9

2012-03-22 14:35:22

szv


Committer: bugmaster Details Diff
0023036: Incorrect initialization of Poly_MakeLoops::Link Affected Issues
0023036
mod - src/Poly/Poly_MakeLoops.hxx Diff File

Issue History

Date Modified Username Field Change
2012-03-22 15:38 szv New Issue
2012-03-22 15:38 szv Assigned To => szv
2012-03-22 15:39 szv Status new => assigned
2012-03-22 15:59 szv Note Added: 0020100
2012-03-22 15:59 szv Assigned To szv => msv
2012-03-22 15:59 szv Status assigned => resolved
2012-03-22 17:21 msv Note Added: 0020104
2012-03-22 17:21 msv Assigned To msv => bugmaster
2012-03-22 17:21 msv Status resolved => reviewed
2012-03-22 17:34 mkv Assigned To bugmaster => aan
2012-03-26 16:12 aan Note Added: 0020140
2012-03-26 16:12 aan Test case number => test case is not required
2012-03-26 16:12 aan Status reviewed => tested
2012-03-29 10:23 bugmaster Note Added: 0020191
2012-03-29 10:23 bugmaster Status tested => verified
2012-03-29 10:23 bugmaster Resolution open => fixed
2012-03-29 10:23 bugmaster Assigned To aan => szv
2012-03-29 17:26 bugmaster Changeset attached => occt master 600519c9