0023036: Incorrect initialization of Poly_MakeLoops::Link